Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#6792 closed bug (fixed)

BSlider doesn't send an action message when invoked using the keyboard

Reported by: peja Owned by: nobody
Priority: normal Milestone: R1
Component: - General Version: R1/Development
Keywords: BSlider Cc:
Blocked By: Blocking:
Platform: All

Description

If the slider is dragged and released using a mouse, it sends an action message (whose model is given in the constructor). However if the slider is moved using the arrow keys, message is not being sent.

On the other hand, if ModificationMessage is used, behavior is exactly the same for both kinds of input.

In my opinion, in order to have a consistent behavior, when slider is moved using the arrow keys, and a key is released, it should send an action message.

Tested on revision 39281, gcc2hybrid

Change History (3)

comment:1 by korli, 14 years ago

It's to be checked against R5. The bebook is unclear on this: the modification message behavior is explicitly specified for MouseDown() but not for KeyDown(). This would suggest to use Invoke() in KeyDown().

comment:2 by stippi, 14 years ago

Resolution: fixed
Status: newclosed

I think I've found a consistent solution in hrev39323. Please confirm whether it actually works, since I was too lazy to write a test application (reopen the ticket if necessary). ;-)

in reply to:  2 comment:3 by peja, 14 years ago

Replying to stippi:

I think I've found a consistent solution in hrev39323. Please confirm whether it actually works, since I was too lazy to write a test application (reopen the ticket if necessary). ;-)

I will test it with the new nightly. In the meantime, you could test it using "shanty":

git clone git://github.com/peja/shanty.git
cd shanty/
git checkout 504e5fa2fa62fa7911dc51c553057e7d66e1df48
jam
shanty --scale --print-partial

The newest revision is using ModificationMessage, because it makes more sense anyway...

Note: See TracTickets for help on using tickets.