 * Reuse the check for changed location which decides whether    to Invoke() in MouseUp() in the code path for keyboard control.    Should fix ticket #6792, but I have not actually tested it.  * Don't post notification values in KeyDown() when the value did    not change because it was constrained between min and max values.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39323 a95241bf-73f2-0310-859d-f6bbb57e9c96